--- a/EasyRent/app/src/main/res/layout/activity_owner_profile.xml
+++ b/EasyRent/app/src/main/res/layout/activity_owner_profile.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OwnerProfile">
+    tools:context=".OwnerProfile"
+    android:id="@+id/drawer_owner">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,7 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:menu="@menu/navigation_menu_owner"
-        android:layout_gravity = "start">
+        android:layout_gravity = "start"
+        android:id="@+id/nav_viewO">
 
     </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
