--- a/EasyRent/app/src/main/res/layout/activity_post__add.xml
+++ b/EasyRent/app/src/main/res/layout/activity_post__add.xml
@@ -33,8 +33,20 @@
         android:id="@+id/full_flat"/>
 
 </RadioGroup>
-
-<EditText
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/owner_name"
+        android:hint="Enter House Owner Name"
+       />
+    <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
@@ -71,11 +83,21 @@
         android:inputType="text"
         android:hint="Email"
         android:layout_marginBottom="20dp"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:id="@+id/rentfee"
+        android:hint="Rent Price"
+        android:layout_marginBottom="20dp"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Submit"
         android:id="@+id/submit"/>
+</LinearLayout>
+    </ScrollView>
+
 
 </LinearLayout>
