--- a/EasyRent/app/src/main/res/layout/activity_update_delete.xml
+++ b/EasyRent/app/src/main/res/layout/activity_update_delete.xml
@@ -75,13 +75,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/ulati"
-                android:hint="Enter House Owner Name"
+                android:hint=""
                 />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/ulongi"
-                android:hint="Enter House Owner Name"
+                android:hint=""
                 />
             <Button
                 android:layout_width="wrap_content"
