--- a/EasyRent/app/src/main/res/layout/activity_user_profile.xml
+++ b/EasyRent/app/src/main/res/layout/activity_user_profile.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".UserProfile">
+    tools:context=".UserProfile"
+    android:id="@+id/drawer_User">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -25,5 +30,14 @@
 
 
     </ListView>
+    </LinearLayout>
 
-</LinearLayout>
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@menu/navigation_menu_user"
+        android:layout_gravity = "start"
+        android:id="@+id/nav_viewU">
+
+    </android.support.design.widget.NavigationView>
+</android.support.v4.widget.DrawerLayout>
