--- a/EasyRent/app/src/main/res/layout/activity_owner_profile.xml
+++ b/EasyRent/app/src/main/res/layout/activity_owner_profile.xml
@@ -16,6 +16,8 @@
         android:textAlignment="center"
         android:textSize="25sp"
         android:text="OwnerInformation"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/tvOwnerInfo"
 
         />
