--- a/EasyRent/app/src/main/res/layout/recyleviewadapter.xml
+++ b/EasyRent/app/src/main/res/layout/recyleviewadapter.xml
@@ -14,15 +14,21 @@
             android:orientation="vertical">
 
             <TextView
+                android:layout_marginTop="50dp"
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginBottom="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:id="@+id/type_id"
                 android:layout_gravity="center_horizontal"
                 android:text="Single Seat"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginBottom="20dp"
                 android:id="@+id/rent_feeid"
                 android:layout_gravity="center_horizontal"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
@@ -30,6 +36,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginBottom="20dp"
                 android:id="@+id/renter_nameid"
                 android:layout_gravity="center_horizontal"
                 android:text="XYZ"
@@ -38,24 +47,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/phone_rentid"
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginBottom="20dp"
                 android:layout_gravity="center_horizontal"
                 android:text="01832541824"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/emal_rentid"
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginBottom="20dp"
                 android:layout_gravity="center_horizontal"
                 android:text="test@xyz.com"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/rent_areaid"
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginBottom="20dp"
                 android:layout_gravity="center_horizontal"
                 android:text="place"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/rent_key"
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_marginBottom="20dp"
                 android:layout_gravity="center_horizontal"
                 android:text="key"/>
 
