--- a/EasyRent/app/src/main/res/layout/activity_update_delete.xml
+++ b/EasyRent/app/src/main/res/layout/activity_update_delete.xml
@@ -15,16 +15,44 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Manage Post"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp"
+
+                />
+
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/utype"
-                android:hint="Enter House Owner Name"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#e69be0ec"
+                android:shadowColor="#e69be0ec"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:hint="Enter User Type"
                 />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/uowner"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#e69be0ec"
+                android:shadowColor="#e69be0ec"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:hint="Enter House Owner Name"
                 />
             <EditText
@@ -33,7 +61,13 @@
                 android:layout_marginTop="20dp"
                 android:hint="House No."
                 android:id="@+id/urent_house"
-                android:layout_marginBottom="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#e69be0ec"
+                android:shadowColor="#e69be0ec"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:inputType="text"/>
 
             <EditText
@@ -41,7 +75,13 @@
                 android:layout_height="wrap_content"
                 android:hint="Road No"
                 android:id="@+id/urent_road"
-                android:layout_marginBottom="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#e69be0ec"
+                android:shadowColor="#e69be0ec"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:inputType="text"/>
             <EditText
                 android:layout_width="match_parent"
@@ -49,38 +89,80 @@
                 android:hint="Area"
                 android:inputType="text"
                 android:id="@+id/urent_area"
-                android:layout_marginBottom="20dp"/>
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#e69be0ec"
+                android:shadowColor="#e69be0ec"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="Phone No"
                 android:id="@+id/urent_phone"
-                android:layout_marginBottom="20dp"/>
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#e69be0ec"
+                android:shadowColor="#e69be0ec"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+
+                />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/urent_email"
                 android:inputType="text"
                 android:hint="Email"
-                android:layout_marginBottom="20dp"/>
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#e69be0ec"
+                android:shadowColor="#e69be0ec"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:id="@+id/urent_fee"
                 android:hint="Rent Price"
-                android:layout_marginBottom="20dp"/>
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#e69be0ec"
+                android:shadowColor="#e69be0ec"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/ulati"
                 android:hint=""
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#e69be0ec"
+                android:shadowColor="#e69be0ec"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/ulongi"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#e69be0ec"
+                android:shadowColor="#e69be0ec"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:hint=""
                 />
             <Button
@@ -88,10 +170,12 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Update"
+                android:background="@drawable/buutonshape"
                 android:id="@+id/update_btn"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buutonshape"
                 android:layout_gravity="center"
                 android:text="Delete"
                 android:id="@+id/delete_btn"/>
