--- a/EasyRent/app/src/main/res/layout/activity_user__login.xml
+++ b/EasyRent/app/src/main/res/layout/activity_user__login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,59 +7,76 @@
     android:orientation="vertical"
     tools:context=".User_Login">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/button"
-        android:scaleType="centerCrop"
-
-        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
+
         <EditText
+            android:layout_marginTop="150dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:background="#e69be0ec"
+            android:shadowColor="#e69be0ec"
             android:hint="@string/user_name"
             android:id="@+id/user_email"
             android:paddingTop="20dp"
-            android:background="#99A3A4"
-            android:paddingBottom="20dp"/>
+            android:paddingBottom="20dp"
+            android:layout_marginBottom="20dp"
+            />
         <EditText
+            android:paddingLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/user_password"
             android:inputType="textPassword"
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
-            android:background="#99A3A4"
+            android:layout_marginBottom="20dp"
+            android:background="#e69be0ec"
+            android:shadowColor="#e69be0ec"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:hint="@string/user_pasword"
             android:layout_marginTop="10dp"/>
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="70dp"
             android:textSize="25sp"
+            android:layout_gravity="center_horizontal"
             android:text="@string/sign_in"
+            android:textColor="#FFFFFF"
             android:id="@+id/user_signin"
-            android:layout_marginTop="10dp"/>
+            android:shadowColor="#A8A8A8"
+            android:shadowRadius="5"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:textStyle="bold"
+            android:background="@drawable/buutonshape"
+            android:layout_marginTop="20dp"/>
         <Button
             android:id="@+id/user_signup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:text="@string/signup"
-            android:textColor="#5DADE2"
-            android:textSize="25sp"
-            android:background="#F0F3F4"
-            android:paddingLeft="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="200dp"
+            android:layout_height="70dp"
+            android:textSize="20sp"
+            android:textColor="#FFFFFF"
+            android:shadowColor="#A8A8A8"
+            android:shadowRadius="5"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:textStyle="bold"
+            android:text="SIGN UP"
+            android:background="@drawable/buutonshape"
+            android:layout_marginTop="20dp"
             />
+
+
     </LinearLayout>
 
 
-
-</LinearLayout>
+    </ScrollView>
