Map searching by location implemented

--- a/EasyRent/app/src/main/res/layout/activity_search__add.xml
+++ b/EasyRent/app/src/main/res/layout/activity_search__add.xml
@@ -5,25 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Manage_Post">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Long Press to manage post"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        />
-
+    tools:context=".Search_Add">
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:paddingTop="15dp"
+        android:id="@+id/search_text"/>
+    <Button
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:id="@+id/search_b"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/search_recyclear"
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
         />
