--- a/EasyRent/app/src/main/res/layout/map_custom_infowindow.xml
+++ b/EasyRent/app/src/main/res/layout/map_custom_infowindow.xml
@@ -4,21 +4,23 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:textSize="20sp"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/custom_id"
+        android:paddingLeft="5dp"
         android:layout_gravity="center_horizontal"
         android:text="Single Seat"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:paddingLeft="5dp"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:id="@+id/custom_rentfee"
         android:layout_gravity="center_horizontal"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
@@ -26,9 +28,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:paddingLeft="5dp"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:id="@+id/custom_name"
         android:layout_gravity="center_horizontal"
         android:text="XYZ"
@@ -37,36 +40,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/custom_phone"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:paddingLeft="5dp"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:text="01832541824"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/custom_email"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:paddingLeft="5dp"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:text="test@xyz.com"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/custom_road_house"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:paddingLeft="5dp"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:text="house_road"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/custom_area"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:paddingLeft="5dp"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:text="place"/>
 </LinearLayout>
