--- a/EasyRent/app/src/main/res/layout/map_custom_infowindow.xml
+++ b/EasyRent/app/src/main/res/layout/map_custom_infowindow.xml
@@ -1,25 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:background="@color/SkyBlue"
     android:layout_height="match_parent"
+    android:layout_marginTop="10dp"
     android:orientation="vertical">
+
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="House Information"
+        android:layout_gravity="center_horizontal"
+        android:textStyle="bold"
         android:textSize="20sp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/Crimson"
+        android:layout_marginTop="10dp"
+        />
+
+    <TextView
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp"
+        android:textSize="15sp"
+        android:textColor="@color/Maroon"
         android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/custom_id"
-        android:paddingLeft="5dp"
         android:layout_gravity="center_horizontal"
         android:text="Single Seat"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:paddingLeft="5dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textSize="15sp"
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/Maroon"
         android:layout_marginBottom="10dp"
         android:id="@+id/custom_rentfee"
         android:layout_gravity="center_horizontal"
@@ -28,9 +43,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:paddingLeft="5dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textSize="10sp"
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/Indigo"
         android:layout_marginBottom="10dp"
         android:id="@+id/custom_name"
         android:layout_gravity="center_horizontal"
@@ -40,9 +55,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/custom_phone"
-        android:textSize="18sp"
-        android:paddingLeft="5dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textSize="10sp"
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/Indigo"
         android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:text="01832541824"/>
@@ -50,9 +65,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/custom_email"
-        android:textSize="18sp"
-        android:paddingLeft="5dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textSize="10sp"
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/Indigo"
         android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:text="test@xyz.com"/>
@@ -60,20 +75,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/custom_road_house"
-        android:textSize="18sp"
-        android:paddingLeft="5dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:layout_marginLeft="10dp"
+        android:textSize="10sp"
+        android:textColor="@color/Indigo"
         android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:text="house_road"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:id="@+id/custom_area"
-        android:textSize="18sp"
-        android:paddingLeft="5dp"
-        android:textColor="@color/colorPrimaryDark"
-        android:layout_marginBottom="10dp"
+        android:textSize="10sp"
+        android:textColor="@color/Indigo"
+        android:layout_marginBottom="15dp"
         android:layout_gravity="center_horizontal"
         android:text="place"/>
 </LinearLayout>
