--- a/EasyRent/app/src/main/res/values/colors.xml
+++ b/EasyRent/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#e60c8fed</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="White">#FFFFFF</color>
+    <color name="White">#E0B4B4</color>
     <color name="Ivory">#FFFFF0</color>
     <color name="LightYellow">#FFFFE0</color>
     <color name="Yellow">#FFFF00</color>
