--- a/EasyRent/app/src/main/res/layout/activity_manage__post.xml
+++ b/EasyRent/app/src/main/res/layout/activity_manage__post.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Manage_Post"
-    android:background="@color/White">
+    tools:context=".Manage_Post">
 
     <TextView
         android:layout_width="wrap_content"
