--- a/EasyRent/app/src/main/res/layout/activity_owner__login.xml
+++ b/EasyRent/app/src/main/res/layout/activity_owner__login.xml
@@ -10,16 +10,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/GhostWhite"
-        >
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/logo"/>
+        android:orientation="vertical">
 
         <EditText
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="150dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
