--- a/EasyRent/app/src/main/res/layout/activity_user_profile.xml
+++ b/EasyRent/app/src/main/res/layout/activity_user_profile.xml
@@ -10,8 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/GhostWhite">
+        android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
