--- a/EasyRent/app/src/main/res/layout/activity_update_delete.xml
+++ b/EasyRent/app/src/main/res/layout/activity_update_delete.xml
@@ -175,6 +175,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/buutonshape"
                 android:layout_gravity="center"
                 android:text="Delete"
