--- a/EasyRent/app/src/main/res/layout/activity_user__login.xml
+++ b/EasyRent/app/src/main/res/layout/activity_user__login.xml
@@ -13,8 +13,13 @@
         android:orientation="vertical"
         >
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:src="@drawable/logo"/>
         <EditText
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="50dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
